--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
