--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@pbe/react-yandex-maps": "^1.2.5",
     "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-redux": "^9.1.0",
