--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
     "swiper": "^11.1.1",
+    "xlsx": "^0.18.5",
     "yandex-disk": "^0.0.8"
   },
   "devDependencies": {
